# terminal-flag-banner

./: .gitignore  LICENSE  README.md  pyproject.toml
terminal_flag_banner/: __main__.py  flag_banner.py
terminal_flag_banner/data/: flags.csv
tests/: test_flag_banner.py
