[project]
name = "terminal-flag-banner"
version = "0.1.0"
description = "A Python package to display a banner of flags in the terminal."
authors = [
    {name = "Joseph Kelly",email = "jsph.kelly@outlook.com"}
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
name = "terminal-flag-banner"
version = "0.1.0"
description = "A Python package to display a banner of flags in the terminal."
authors = ["Joseph Kelly jsph.kelly@outlook.com"]
license = "MIT"
dependencies = {python = ">=3.10",ascii-magic = "^2.3.0"}
packages = [
    { include = "terminal-flag-banner" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
